--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: test
 on: [push]
 
 jobs:
-  setup:
+  tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,15 +14,5 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: "1.18"
-
-  test:
-    needs: setup
-    runs-on: ubuntu-latest
-    steps:
       - run: go test ./test
-
-  vet:
-    needs: setup
-    runs-on: ubuntu-latest
-    steps:
       - run: go vet ./...
