--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,5 +14,6 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: "1.18"
+      - run: go test ./...
       - run: go test ./test
       - run: go vet ./...
